# Nova-Task-Agent

./: README.md
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: deps.py  errors.py
backend/src/app/api/v1/: __init__.py  auth.py  conversations.py  nova.py  tasks.py
backend/src/app/core/: config.py  security.py
backend/src/app/db/: base.py  session.py
backend/src/app/models/: conversation.py  task.py  user.py
backend/src/app/schemas/: auth.py  conversation.py  nova.py  task.py
backend/src/app/services/: auth_service.py  conversations_service.py  nova_service.py  tasks_service.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_no_fancy_dashes.py  test_nova.py  test_tasks.py
frontend/: README.md  app.json  package-lock.json  package.json
frontend/src/app/: _layout.tsx  index.tsx
frontend/src/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  onboarding.tsx  signup.tsx
frontend/src/app/(tabs)/: _layout.tsx  index.tsx  profile.tsx  tasks.tsx
frontend/src/components/: AuthInput.tsx  ConversationDrawer.tsx  FormErrorBanner.tsx  Glyphs.tsx  GradientButton.tsx  NovaMark.tsx  QuoteBanner.tsx  StatusPill.tsx  TabBar.tsx  TaskCard.tsx  ThinkingDots.tsx
frontend/src/constants/: config.ts  theme.ts
frontend/src/hooks/: use-stream-buffer.ts
frontend/src/lib/: api.ts  confirm.ts  format.ts  match.ts  session.ts  storage.ts  validation.ts
frontend/src/store/: auth.tsx  conversations.tsx  tasks.tsx
frontend/src/types/: auth.ts  task.ts
(+1 files in other folders)
